# Deckling

./: .gitignore  README.md  main.py
arduino/: arduino.ino
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  configStore.ts  index.css  types.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: config.rs  daemon.rs  keyboard.rs  main.rs  serial.rs  startup.rs  voicemeeter.rs
ui/src/components/: AdvancedSettings.tsx  ButtonGrid.tsx  KeybindModal.tsx  PinEditModal.tsx  PotCalibrationModal.tsx  PotRow.tsx  ProfileBar.tsx
